# KimiX

./: .gitignore  AGENTS.md  README.md  README_zh.md  install.py  publish.py  pyproject.toml  test_bm25_correctness.py
.kimix/: config.json
docs/: anthropic.json  deepseek.json  gemini.json  google_genai.json  kimi.json  multiple_models.json  openai_legacy.json  openai_responses.json  rtk_todo.md  vertexai.json
example/: custom_llm.py
kimi-cli/: Makefile  pyproject.toml
kimi-cli/scripts/: check_kimi_dependency_versions.py  check_version_tag.py  cleanup_tmp_sessions.py
kimi-cli/src/kimi_cli/: __main__.py  _ripgrep_common.py  _rtk_common.py  agentspec.py  app.py  config.py  constant.py  install.py  llm.py  metadata.py  safety_check.py  session.py  session_fork.py  session_state.py
kimi-cli/src/kimi_cli/acp/: server.py  session.py  tools.py
kimi-cli/src/kimi_cli/agents/default/: agent.yaml  coder.yaml  explore.yaml
kimi-cli/src/kimi_cli/agents/okabe/: agent.yaml
kimi-cli/src/kimi_cli/auth/: oauth.py  platforms.py
kimi-cli/src/kimi_cli/background/: manager.py  store.py
kimi-cli/src/kimi_cli/cli/: __init__.py  _lazy_group.py  export.py  info.py  mcp.py  plugin.py
kimi-cli/src/kimi_cli/hooks/: engine.py  runner.py
kimi-cli/src/kimi_cli/mcp/: __init__.py  client.py  config.py  prompts.py  resources.py  roots.py  sampling.py  server.py  types.py
kimi-cli/src/kimi_cli/notifications/: llm.py  store.py
kimi-cli/src/kimi_cli/plugin/: __init__.py  manager.py  tool.py
kimi-cli/src/kimi_cli/prompts/: compact.md  compact_cascade.md
kimi-cli/src/kimi_cli/skill/flow/: __init__.py  d2.py  mermaid.py
kimi-cli/src/kimi_cli/soul/: __init__.py  agent.py  compaction.py  context.py  context_db.py  context_pruning.py  history_index.py  kimisoul.py  llm_request_recorder.py  slash.py  toolset.py
kimi-cli/src/kimi_cli/soul/dynamic_injections/: compact_reminder.py  done_reminder.py  resilience_reminder.py
kimi-cli/src/kimi_cli/subagents/: git_context.py  runner.py  store.py
kimi-cli/src/kimi_cli/tools/: __init__.py  context_prune.py  context_retrieval.py  display.py  step_mem.py  utils.py
kimi-cli/src/kimi_cli/tools/agent/: __init__.py
kimi-cli/src/kimi_cli/tools/ask_user/: __init__.py
kimi-cli/src/kimi_cli/tools/dmail/: __init__.py
kimi-cli/src/kimi_cli/tools/file/: __init__.py  check_fmt.py  glob.py  grep_local.py  hash_line.py  read.md  read.py  read_media.md  read_media.py  replace.py  utils.py  write.py
kimi-cli/src/kimi_cli/tools/shell/: __init__.py
kimi-cli/src/kimi_cli/tools/todo/: __init__.py
kimi-cli/src/kimi_cli/tools/web/: fetch.py
kimi-cli/src/kimi_cli/utils/: aioqueue.py  changelog.py  datetime.py  diff.py  editor.py  environment.py  executor.py  export.py  file_filter.py  image_compress.py  image_format_policy.py  invalid_args.py  io.py  path.py  pyinstaller.py  shell_quoting.py  slashcmd.py  string.py  term.py  tokens.py
kimi-cli/src/kimi_cli/utils/rich/: __init__.py  diff_render.py
kimi-cli/src/kimi_cli/vfs/: core.py
kimi-cli/src/kimi_cli/wire/: __init__.py  file.py  protocol.py  server.py  types.py
kimi-cli/src/kimix/: __init__.py
kimi-cli/src/kimix/tools/: __init__.py  common.py
kimi-cli/tests/: conftest.py  test_vfs_core.py  test_vfs_integration.py
kimi-cli/tests/auth/: test_oauth_refresh.py  test_platforms.py  test_resolve_api_key.py
kimi-cli/tests/chat_provider/: test_context_prune_provider_invariants.py
kimi-cli/tests/core/: test_agent_spec.py  test_auth_error_handling.py  test_compact_reminder.py  test_config.py  test_context.py  test_context_db.py  test_context_pruning.py  test_context_records.py  test_create_llm.py  test_default_agent.py  test_dynamic_injection_hooks.py  test_export_cli.py  test_history_index.py  test_kimisoul_auto_retrieve.py  test_kimisoul_context_prune.py  test_kimisoul_ralph_loop.py  test_kimisoul_repeat.py  test_kimisoul_retry_recovery.py  test_llm_request_recorder.py  test_load_agent.py  test_plugin_manager.py  test_plugin_tool.py  test_session.py  test_session_export.py  test_session_fork.py  test_session_logging.py  test_session_state.py  test_startup_imports.py  test_subagent_builder.py  test_subagent_resume_e2e.py  test_toolset.py  test_wire_message.py
kimi-cli/tests/hooks/: test_config.py  test_integration.py
kimi-cli/tests/mcp/: test_client.py  test_config.py  test_mcp_config.py  test_prompts.py  test_resources.py  test_server.py
kimi-cli/tests/tools/: test_agent_tool.py  test_check_fmt.py  test_context_prune.py  test_edit_file.py  test_edit_file_fuzzy.py  test_extract_key_argument.py  test_glob.py  test_grep.py  test_hash_line.py  test_read_file.py  test_read_media_file.py  test_read_media_file_desc.py  test_reason.py  test_shell_bash.py  test_step_mem.py  test_todo.py  test_tool_descriptions.py  test_tool_schemas.py  test_utils.py  test_work_dir_resolution.py  test_write_file.py
kimi-cli/tests/utils/: test_atomic_json_write.py  test_editor.py  test_image_compress.py  test_image_format_policy.py  test_invalid_args.py  test_pyinstaller_utils.py  test_tokens.py  test_utils_path.py
kimi-cli/tests_ai/accuracy_smoke/: README.md
kimi-cli/tests_ai/scripts/: main.yaml  worker.yaml
kimi-cli/tests_e2e/: AGENTS.md  test_mcp_cli.py  test_mcp_server_stdio.py  test_wire_approvals_tools.py  test_wire_config.py  test_wire_errors.py  test_wire_prompt.py  test_wire_sessions.py  wire_helpers.py
kimi-cli/tools/: probe_openai_responses.py  probe_openai_responses2.py
scripts/: install_coreutils.py  install_ripgrep.py  install_rtk.py  update_doc.py  update_thirdparty.py
tests/: conftest.py  test_background_utils.py  test_bash.py  test_bash_tools.py  test_check_fmt.py  test_cli_impl_mcp.py  test_cli_line_editing.py  test_cli_server.py  test_cli_sessions_command.py  test_cli_store_load_command.py  test_cli_swarm_command.py  test_config_loading.py  test_cot.py  test_custom_config.py  test_dummy_app.py  test_grep_filter.py  test_init.py  test_integration_compaction.py  test_note.py  test_parsers.py  test_powershell.py  test_print_agent_json.py  test_proccess_pwsh.py  test_process_task.py  (+13 more)
(+309 files in other folders)
