[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kimix"
version = "0.1.25"
description = "Kimi Agent Tools - Custom tool collection for Kimi Agent SDK"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.14"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "numpy>=2.4.3",
    "playwright",
    "markdownify",
    "kimi-cli-x>=1.44.11",
    "fastapi>=0.133.1",
    "uvicorn>=0.41.0",
    "httpx>=0.28.1",
    "orjson>=3.11.9",
    "pydantic>=2.13.4",
    "opencc-python-reimplemented>=0.1.7",
    "pyreadline3>=3.5.6; platform_system == 'Windows'",
    "regex>=2023.0.0",
    "msgspec>=0.19.0",
    "uvloop>=0.22.1; sys_platform != 'win32'",
    "apsw>=3.45.0",
]

[project.optional-dependencies]
# Office document processing
office = [
    "pymupdf>=1.23.0",
    "pdfplumber>=0.10.0",
    "python-docx>=1.1.0",
]

# Image processing & OCR
image_process = [
    "pillow>=12.2.0",
    "pytesseract>=0.3.10",
]

# Windows readline compatibility for CLI Tab completion
windows_cli = ["pyreadline3>=3.5.6"]

# All optional dependencies
all = [
    "pymupdf>=1.23.0",
    "pdfplumber>=0.10.0",
    "python-docx>=1.1.0",
    "pillow>=12.2.0",
    "pytesseract>=0.3.10",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.0.0",
    "inline-snapshot>=0.33.0",
    "black>=23.0.0",
    "ruff>=0.15.10",
    "mypy>=1.5.0",
    "pyreadline3>=3.5.6",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.hatch.build.targets.wheel]
packages = ["src/kimix", "src/kimi_agent_sdk"]
sources = ["src"]

[tool.uv]
link-mode = "symlink"

[tool.uv.workspace]
members = [
    "kimi-cli",
    "kimi-cli/packages/kosong",
    "kimi-cli/packages/kaos",
]

[tool.uv.sources]
kimi-cli-x = { workspace = true }
kosong-x = { workspace = true }
pykaos = { workspace = true }

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[project.scripts]
kimix = "kimix.cli:cli"

[tool.mypy]
# Strict mode switch
strict = true

# Or manually enable individual strict checks (when strict = false)
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

# Disallow implicit optional (None must be explicitly declared)
no_implicit_optional = true

# Check untyped definitions
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true

# Check Any types
disallow_any_generics = true

# Other useful options
show_error_codes = true        # Show error codes for easy # type: ignore[xxx]
ignore_missing_imports = true  # Skip when third-party libraries lack type stubs
exclude = ["tests/", "scripts/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[dependency-groups]
dev = [
    "inline-snapshot>=0.33.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.0.0",
    "ruff>=0.15.10",
    "mypy>=1.5.0",
    "respx>=0.22.0",
]
